[package]
name = "fuck-sheep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.21.1",features = ["full"]}
reqwest = {version = "0.11.11",features = ["json","gzip","brotli","deflate"]}
num_cpus = "1.13.1"
clap = {version = "3.2.22",features = ["derive"]}
chrono = "0.4.22"
serde = {version = "1.0.144",features = ["derive"]}
serde_json = "1.0.85"
rand = "0.8.5"